# stat-453-constraint-based-llm

./: .gitignore  README.md  Test_run_finetune.ipynb  pipeline.ipynb  pyproject.toml
Cross_validation/: cross_validation_README.md  cross_validation_kfold.ipynb  cross_validation_kfold.py  lora_base.ipynb
baseline_testing/: constraint_checker.py  driver.ipynb  driver_local.ipynb  evaluator.py  judge.py  recast_eval.ipynb  test_constraint_checker.py  viz_utils.py
datasets/: RECAST-30K.json  cluster_dataset.py  recast_clustered_summary.json  test_cluster_dataset.py
docs/: stat453_proposal_team15.latex
docs/literature/: recast_paper_notes.md
docs/report/: referenceGraphResults.doc  stat453_report_team15.tex  ~$ferenceGraphResults.doc
lora_finetuning_basic/: README (1).md  lora_base.ipynb  lora_base.py
notebooks/: driver.ipynb
src/: train_full_finetune.py
src/crllm/dataset/augmentation/: README.md  augment.py  back_translate.py  lexical_edit.py
src/crllm/dataset/clustering/: cluster_dataset.py
src/crllm/dataset/preprocess/: README.md  preprocess.py  run_preprocess.sh
src/crllm/evaluation/: constraint_checker.py  evaluator.py  judge.py  validate_constraints.py  viz_utils.py
src/crllm/pipeline/: lora_cv.py  run_pipeline.ipynb
src/crllm/training/full_finetune/: README.md  train_full_finetune.py
tests/: test_augment.py  test_back_translate.py  test_cluster_dataset.py  test_constraint_checker.py  test_lexical_edit.py  test_preprocess.py
utilities/: README.md  count_non_ascii_records.py  dataset_summary.py  dataset_summary.txt  non_ascii_report.txt
(+3 files in other folders)
