[project]
name = "stat-453-constraint-based-llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Gayathri Ethiraj, Fnu Rinkle Rose Renny, Mark Aashish Lnu, Shreyas Natarajan"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langdetect (>=1.0.9,<2.0.0)",
    "emoji (>=2.15.0,<3.0.0)",
    "nltk (>=3.9.4,<4.0.0)",
    "datasketch (>=1.10.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
packages = [{include = "crllm", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
